--- a/assets/css/pages/products.css
+++ b/assets/css/pages/products.css
@@ -236,5 +236,6 @@
         padding-top: 100%;
         border-right: none;
         border-bottom: 1px solid var(--border-color);
+        margin: 0 auto;
     }
 }
